--- a/ml_algorithms_test.ipynb
+++ b/ml_algorithms_test.ipynb
@@ -406,6 +406,42 @@
         "plt.title(\"Breast Cancer Data Visualization \")\n",
         "plt.show()"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## 7.Random Forest"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 7,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Random Forest Accuracy on Breast Cancer: 0.9473684210526315\n"
+          ]
+        }
+      ],
+      "source": [
+        "from sklearn import datasets\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "from algorithms.decision_tree import DecisionTree\n",
+        "from algorithms.random_forest import RandomForest\n",
+        "from sklearn.metrics import accuracy_score\n",
+        "# Load dataset\n",
+        "X, y = datasets.load_breast_cancer(return_X_y=True)\n",
+        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=42)\n",
+        "# Train and evaluate    \n",
+        "rf = RandomForest(n_trees=10, max_depth=10)\n",
+        "rf.fit(X_train, y_train)\n",
+        "y_pred = rf.predict(X_test)\n",
+        "print(\"Random Forest Accuracy on Breast Cancer:\", accuracy_score(y_test, y_pred))"
+      ]
     }
   ],
   "metadata": {
